--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ body{
       font-size: 49px;
       font-weight: 56px;
       padding-bottom: 55px;
+
+      span{
+        color:#89C5CC;
+      }
     }
 
     p{
